benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_int_ModExpPow2_int_iter10_error.log
=== Verification Error - Iteration 10 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_int_ModExpPow2_int.rs
Time: 2025-09-15 19:39:41

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:30:13
   |
30 |   if exp == 0 {
   |      ---    ^ expected `nat`, found integer
   |      |
   |      expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:31:5
   |
25 | exec fn mod_pow(base: nat, exp: nat, m: nat) -> (res: nat)
   |                                                       --- expected `vstd::prelude::nat` because of return type
...
31 |     1
   |     ^ expected `nat`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:33:36
   |
33 |     let half = mod_pow(base, exp / 2, m);
   |                              ---   ^ expected `nat`, found integer
   |                              |
   |                              expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:35:14
   |
35 |     if exp % 2 == 1 {
   |        ---   ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:35:19
   |
35 |     if exp % 2 == 1 {
   |        -------    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:56:14
   |
56 |   if temp == 0 {
   |      ----    ^ expected `nat`, found integer
   |      |
   |      expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:60:16
   |
60 |   while temp > 0
   |         ----   ^ expected `nat`, found integer
   |         |
   |         expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:64:15
   |
64 |     if temp % 2 == 1 {
   |        ----   ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:64:20
   |
64 |     if temp % 2 == 1 {
   |        --------    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:69:19
   |
69 |     temp = temp / 2;
   |            ----   ^ expected `nat`, found integer
   |            |
   |            expected because this is `vstd::prelude::nat`

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0308`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:30:13
   |
30 |   if exp == 0 {
   |      ---    ^ expected `nat`, found integer
   |      |
   |      expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:31:5
   |
25 | exec fn mod_pow(base: nat, exp: nat, m: nat) -> (res: nat)
   |                                                       --- expected `vstd::prelude::nat` because of return type
...
31 |     1
   |     ^ expected `nat`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:33:36
   |
33 |     let half = mod_pow(base, exp / 2, m);
   |                              ---   ^ expected `nat`, found integer
   |                              |
   |                              expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:35:14
   |
35 |     if exp % 2 == 1 {
   |        ---   ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:35:19
   |
35 |     if exp % 2 == 1 {
   |        -------    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:56:14
   |
56 |   if temp == 0 {
   |      ----    ^ expected `nat`, found integer
   |      |
   |      expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:60:16
   |
60 |   while temp > 0
   |         ----   ^ expected `nat`, found integer
   |         |
   |         expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:64:15
   |
64 |     if temp % 2 == 1 {
   |        ----   ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:64:20
   |
64 |     if temp % 2 == 1 {
   |        --------    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:69:19
   |
69 |     temp = temp / 2;
   |            ----   ^ expected `nat`, found integer
   |            |
   |            expected because this is `vstd::prelude::nat`

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0308`.
